Created check-in.html and updated relevant files to allow for check-ins to be written to Firestore

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,5 +3,6 @@
   "short_name": "Class Keeper",
   "start_url": "/exit-ticket.html",
   "display": "standalone",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "gcm_sender_id": "103953800507"
 }
